Closed Bug 23490 Opened 26 years ago Closed 26 years ago

[dogfood] replying to a message without a subject fails to initialize window

Categories

(MailNews Core :: Composition, defect, P3)

x86
Other

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mscott, Assigned: bugzilla)

Details

(Whiteboard: [PDT-])

If i am reading a message that doesn't have a subject and I try to reply or reply all to the message, we fail to initialize the compose window. That is, the to, cc fields are all left blank. And the body isn't quoted so the editor window is blank. This was using a 01/09/00 build.
Severity: normal → major
QA Contact: lchiang → esther
Whiteboard: [PDT-]
This is inconvienient to be sure -- but it's not a dogfood issue. Marking PDT-.
Status: NEW → ASSIGNED
Target Milestone: M13
I am working on it...
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Fixed and checked in. Also, now if the user doesn't specify a subject, we (as does 4.7) put a default one.
Using build 2000012109m13 on win98, 2000012108m13 on linux, 2000012108m13 on mac this is fixed. Tested no subject on Send, we now put in a subject. Tested forwarding a message no subject message (sent by 4.7) all platforms OK. Tested Reply to a message with no subject (sent by 4.7) all platforms OK. Verified
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.