Fix for bug 23490. nsMsgDatabase::RowCellColumnToCharPtr should not return an error when a cell is empty but an empty string. Also add default subject when user doesn't specify one. R=bienvenu