mailnews/compose/src/nsMsgSend.cpp
@@ -2176,6 +2176,10 @@ nsMsgComposeAndSend::InitCompositionFields(nsMsgCompFields *fields)
 		HJ41792
 	}
 
+  // If no subject was specified, use default one
+  pStr = fields->GetSubject();
+  if (!pStr || !*pStr)
+  	 mCompFields->SetSubject(ComposeGetStringByID(NS_MSG_NO_SUBJECT_WAS_SPECIFIED));
   
   // Now, we will look for a URI defined as the default FCC pref. If this is set,
   // then SetFcc will use this value. The FCC field is a URI for the server that 
